--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -61,9 +61,9 @@
             <div style="clear: both"></div>
             <input class="button-update-sc" type="submit" value="Update Quantity" />
             <a class="navi-item"
-               th:href="@{/shoppingCartCustomer}">Enter Customer Info</a>
+               th:href="@{/shoppingCartCustomer}">Complete your order</a>
             <a class="navi-item"
-               th:href="@{/productList}">Continue Buy</a>
+               th:href="@{/productList}">Back to store</a>
          </form>
       </th:block>
        
