--- a/src/main/resources/templates/shoppingCartConfirmation.html
+++ b/src/main/resources/templates/shoppingCartConfirmation.html
@@ -24,7 +24,7 @@
          </ul>
          <h3>Cart Summary:</h3>
          <ul>
-            <li>Quantity: <span th:utext="${myCart.quantityTotal}"></span>$</li>
+            <li>Quantity: <span th:utext="${myCart.quantityTotal}"></span></li>
             <li>Total:
                <span class="total"
                   th:utext="${#numbers.formatDecimal(myCart.amountTotal,3,2,'COMMA')}">  
